UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Approval_Grid__c.object
<CustomObject>
    <fields>
        <fullName>Is_New_Low__c</fullName>
        <description>This field only used for report purpose</description>
        <formula>IF(Phoenix_Is_New_Low__c =True, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is New Low?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Product__c</fullName>
        <description>This field only used for Report Puropose</description>
        <formula>if(Phoenix_Is_partner_product__c  = True,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Partner Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_GM_Impact_Limit__c</fullName>
        <label>Annualized GM Impact Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_GM_Impact__c</fullName>
        <label>Annualized GM  Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_GM_Limit__c</fullName>
        <label>Annualized GM Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_GM__c</fullName>
        <label>Annualized  GM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_TP_Impact_Limit__c</fullName>
        <label>Annualized TP Impact Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_TP_Impact__c</fullName>
        <label>Annualized TP Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_TP_Limit__c</fullName>
        <label>Annualized TP Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Annualized_TP__c</fullName>
        <label>Annualized TP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval__c</fullName>
        <label>Marketing Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipName>Approval_Grid_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Approval Grid</relationshipLabel>
        <relationshipName>Approval_Grid_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Head_Approval__c</fullName>
        <label>Business Head Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Business_Head_Comments__c</fullName>
        <label>Business Head Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_GM_Limit__c</fullName>
        <label>GM% Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GM__c</fullName>
        <label>GM%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_IsOTCLeadApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOTCLeadApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Criteria_Matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Criteria Matched?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Mkg_Head_Noti_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mkg Head Noti Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_New_Low__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is New Low?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_SVP_Notification_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SVP Notification Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_partner_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_OTC__c</fullName>
        <label>Marketing Lead OTC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_Rx__c</fullName>
        <label>Marketing Lead Rx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead_SRx__c</fullName>
        <label>Marketing Lead SRx</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Mkt_Head_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Head Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Product_WAC_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Product WAC Pricing</label>
        <referenceTo>New_Product_WAC_Pricing__c</referenceTo>
        <relationshipLabel>Approval Grid</relationshipLabel>
        <relationshipName>Approval_Grid</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Quadrant__c</fullName>
        <label>Quadrant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Revenue_Limit__c</fullName>
        <label>Revenue Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_SSA_Impact_Limit__c</fullName>
        <label>SSA Impact Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_SSA_Impact__c</fullName>
        <label>SSA Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Selected_Approval_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Approval Matrix</label>
        <referenceTo>Phoenix_Approval_Matrix__c</referenceTo>
        <relationshipLabel>Approval Grid</relationshipLabel>
        <relationshipName>Approval_Grid</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sr_Director_VP_Finance_Comments__c</fullName>
        <label>Sr Director / VP Finance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sr_Director_VP__c</fullName>
        <label>Sr Director / VP Finance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_TP_Limit__c</fullName>
        <label>TP% Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_TP__c</fullName>
        <label>TP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_VP_Finance_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP Finance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isBusinessHeadApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBusinessHeadApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isFinanceVPApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinanceVPApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isMarketingHeadApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMarketingHeadApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isMarketingRxLeadApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMarketingRxLeadApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isMarketingSrxLeadApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMarketingSrxLeadApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isOTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isRx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_isSRX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSRX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Approval Grid</relationshipLabel>
        <relationshipName>Approval_Grid</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Grid</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Annualized_GM__c</columns>
        <columns>Phoenix_Annualized_GM_Impact__c</columns>
        <columns>Phoenix_Annualized_GM_Impact_Limit__c</columns>
        <columns>Phoenix_Annualized_GM_Limit__c</columns>
        <columns>Phoenix_Annualized_TP__c</columns>
        <columns>Phoenix_Annualized_TP_Impact__c</columns>
        <columns>Phoenix_Annualized_TP_Impact_Limit__c</columns>
        <columns>Phoenix_Annualized_TP_Limit__c</columns>
        <columns>Phoenix_GM__c</columns>
        <columns>Phoenix_GM_Limit__c</columns>
        <columns>Phoenix_Product_Family__c</columns>
        <columns>Phoenix_TP__c</columns>
        <columns>Phoenix_TP_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approval Grid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Grid</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>